# tank

./: .gitignore  CHANGELOG.md  README.md  RELEASES.md  architecture.md  pyproject.toml  recommendations.md  tab-disambiguation-handoff.md
.claude/: CLAUDE.md  plan.md
.claude/skills/work-ledger/: SKILL.md
.github/workflows/: auto-release.yml  benchmark.yml  ci.yml  cut-release.yml  parse-llms-full.yml  release.yml
.work/: REVIEWER_FINDINGS.md  SCRUTINY.md  executor-prompt.md  foundation_handoff.md  ledger.yaml  progress.txt  research_spikes.md  review-chunk.sh  review-prompt-template.md  run-chunk.sh
.work/handoffs/: chunk-07-builder-verification.md  chunk-08-verification.md  chunk-09-verification.md  chunk-10-verification.md  chunk-11-integration-tests-verification.md  planner-to-executor.md
docs/: MCP.md  STATUS.md  api-contracts.md  architecture.md  benchmarks.md  chunking.md  decisions.md  document-processing.md  glossary.md  hybrid-search.md  mcp-token-overhead.md  ranking.md  recommendations.md  roadmap.md  search-benchmarks.md  spikes.yaml  todo.md  top20-python-packages.md  ultraplan-review.md  ultraplan.md
packs/: fastmcp@3.3.0.ctx
scripts/: README.md  build-pack-html.sh  build-pack.sh  build_benchmark_packs.py  fastmcp.md  inspect_markdown.py  llms_full_to_markdown.py  release.sh  run_accurate_benchmarks.py  validate_chunk_sizes.py
src/synd/: __main__.py  errors.py  server.py
src/synd/builder/: build.py  chunking.py  fetch.py  llms_full.py  manifest.py  mdx.py  normalizer.py  url_filter.py
src/synd/cli/: __init__.py  _lockfile.py  add.py  build.py  exit_codes.py  inspect.py  main.py  pull.py  query.py  remove.py  serve.py  sync.py  verify.py
src/synd/policy/: engine.py
src/synd/schemas/: __init__.py  chunk.v1.schema.json  manifest.v2.schema.json  pages.v1.schema.json  tool-response.v1.schema.json  types.py
src/synd/search/: fts.py
src/synd/storage/: db.py
src/synd/validator/: verify.py
src/tank/: errors.py  server.py
src/tank/builder/: build.py  chunking.py  manifest.py
src/tank/cli/: _lockfile.py  add.py  build.py  main.py  pull.py  query.py  remove.py  serve.py  sync.py  verify.py
src/tank/policy/: engine.py
src/tank/schemas/: __init__.py  manifest.v2.schema.json
src/tank/search/: fts.py
src/tank/storage/: db.py  models.py
src/tank/validator/: verify.py
tests/: conftest.py  test_errors.py  test_integration.py  test_llms_full_to_markdown.py  test_server.py
tests/benchmarks/: compare.py  test_compare.py  test_query_latency.py  test_token_overhead.py  test_webfetch_vs_synd.py  test_webfetch_vs_tank.py
tests/benchmarks/fixtures/: fastmcp-running-server.md  oversized-indented-block.md
tests/benchmarks/results/: latency.json  latest.json  webfetch_vs_synd_latest.json  webfetch_vs_tank_latest.json
tests/test_builder/: test_build.py  test_chunking.py  test_fetch.py  test_llms_full.py  test_manifest.py  test_mdx.py  test_normalizer.py  test_url_filter.py
tests/test_cli/: test_add.py  test_build.py  test_exit_codes.py  test_inspect.py  test_pull.py  test_query.py  test_remove.py  test_serve.py  test_sync.py  test_verify.py
tests/test_policy/: test_engine.py
tests/test_schemas/: test_chunk_schema.py  test_manifest_schema.py  test_pages_schema.py  test_schema_consistency.py  test_tool_response_schema.py
tests/test_search/: test_fts.py
tests/test_storage/: test_db.py  test_models.py
tests/test_validator/: test_verify.py
(+4 files in other folders)
