[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tank"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click",
    "rich",
    "mcp",
    "chunkana>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff==0.15.8",
    "bump-my-version",
]
all = [
    "tank[dev]",
]

[project.scripts]
tank = "tank.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: requires real network access (opt-in via --network)",
    "benchmark: token overhead benchmark (opt-in via --benchmark)",
]

[tool.ruff]
target-version = "py311"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = "--no-verify"
message = "chore: bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
