[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synaptic-drift"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    "click",
    "rich",
    "chunkana>=0.1",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "types-jsonschema",
    "ruff",
    "bump-my-version",
]
serve = [
    "mcp",
]
all = [
    "synaptic-drift[dev,serve]",
]

[project.scripts]
synd = "synd.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: requires real network access (opt-in via --network)",
    "benchmark: token overhead benchmark (opt-in via --benchmark)",
]

[tool.ruff]
target-version = "py312"

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = "--no-verify"
message = "chore: bump version {current_version} → {new_version}"

[tool.setuptools.package-data]
"synd.schemas" = ["*.json"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
